--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "jalaj",
   "license": "MIT",
   "dependencies": {
+    "amazon-s3-url-signer": "0.0.7",
+    "aws-sdk": "^2.2.40",
     "body-parser": "^1.8.3",
+    "crypto": "0.0.3",
     "dependency": "0.0.1",
     "express": "^4.9.4",
     "morgan": "^1.3.1",
-    "mysql": "~2.5.0",   
+    "mysql": "~2.5.0",
     "sequelize": "~1.7.0"
   }
 }
