--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.9.4",
     "morgan": "^1.3.1",
     "mysql": "~2.5.0",
+    "node-base64-image": "^0.1.2",
     "sequelize": "~1.7.0"
   }
 }
