--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-    "name": "nodetutorial",
-    "version": "1.0.0",
-    "description": "tutorial",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "devDependencies": {
-        "gulp": "latest",
-        "bower": "latest",
-        "gulp-nodemon": "latest",
-        "gulp-watch": "~0.6.4",
-        "gulp-jshint": "latest",
-        "gulp-livereload": "^1.5.0"
-    },
-    "author": "jalaj",
-    "license": "MIT",
-    "dependencies": {
-        "amazon-s3-url-signer": "0.0.7",
-        "aws-sdk": "^2.2.40",
-        "body-parser": "^1.8.3",
-        "blueimp-file-upload-expressjs": "^0.2.10",
-        "cookie-parser": "~1.0.1",
-        "crypto": "0.0.3",
-        "dependency": "0.0.1",
-        "debug": "~0.7.4",
-        "ejs": "~0.8.5",
-        "express": "^4.9.4",
-        "morgan": "^1.3.1",
-        "mysql": "~2.5.0",
-        "node-base64-image": "^0.1.2",
-        "sequelize": "~1.7.0",    
-        "static-favicon": "~1.0.0"
-    }
+  "name": "nodetutorial",
+  "version": "1.0.0",
+  "description": "tutorial",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "gulp": "latest",
+    "bower": "latest",
+    "gulp-nodemon": "latest",
+    "gulp-watch": "~0.6.4",
+    "gulp-jshint": "latest",
+    "gulp-livereload": "^1.5.0"
+  },
+  "author": "jalaj",
+  "license": "MIT",
+  "dependencies": {
+    "amazon-s3-url-signer": "0.0.7",
+    "aws-sdk": "^2.2.40",
+    "blueimp-file-upload-expressjs": "^0.2.10",
+    "body-parser": "^1.8.3",
+    "canvas": "^1.3.12",
+    "cookie-parser": "~1.0.1",
+    "crypto": "0.0.3",
+    "debug": "~0.7.4",
+    "dependency": "0.0.1",
+    "ejs": "~0.8.5",
+    "express": "^4.9.4",
+    "image-size": "^0.5.0",
+    "morgan": "^1.3.1",
+    "mysql": "~2.5.0",
+    "node-base64-image": "^0.1.2",
+    "sequelize": "~1.7.0",
+    "static-favicon": "~1.0.0"
+  }
 }
